<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UnscrambleActivity"
    android:background="@drawable/bg"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/horizonfont"
            android:text="@string/unscrambleGame"
            android:textColor="@color/grey"
            android:textSize="40sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:id="@+id/scrambled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/horizonfont"
                android:textColor="@color/grey"
                android:textSize="40sp"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/input"
                android:layout_width="277dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:fontFamily="@font/horizonfont"
                android:textColor="@color/grey"
                android:background="@color/green"
                android:textSize="25sp"
                android:gravity="center"
                android:hint= "..."
                android:textColorHint="@color/grey"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/horizonfont"
                android:text="@string/submit"
                android:textColor="@color/green"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                android:includeFontPadding="false"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="421dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/grey">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/horizonfont"
            android:textColor="@color/green"
            android:textSize="40sp"
            android:gravity="center"
            />
        <Button
            android:id="@+id/tryAgain"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/horizonfont"
            android:text="@string/tryAgain"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:includeFontPadding="false" />
        <Button
            android:id="@+id/anotherWord"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/horizonfont"
            android:text="@string/anotherWord"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:includeFontPadding="false" />
        <Button
            android:id="@+id/menu"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/horizonfont"
            android:text="@string/backToMenu"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:includeFontPadding="false" />

    </LinearLayout>

</FrameLayout>