<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MatchActivity"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:padding="10dp"
    android:fillViewport="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/horizonfont"
                android:text="@string/matchGame"
                android:textColor="@color/grey"
                android:textSize="40sp"
                android:gravity="center"/>
            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="2"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="10dp"
                android:padding="10dp"
                android:stretchMode="columnWidth"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/result"
            android:layout_width="421dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/grey">
            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/horizonfont"
                android:textColor="@color/green"
                android:textSize="40sp"
                android:gravity="center"
                />
            <Button
                android:id="@+id/playAgain"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/horizonfont"
                android:text="@string/playAgain"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:includeFontPadding="false" />
            <Button
                android:id="@+id/menu"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/horizonfont"
                android:text="@string/backToMenu"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:includeFontPadding="false" />

        </LinearLayout>
    </FrameLayout>


</ScrollView>