<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GuessTheOutputActivity"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:padding="10dp"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/horizonfont"
                android:text="@string/guessTheOutput"
                android:textColor="@color/grey"
                android:textSize="40sp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:layout_gravity="center">

                    <TextView
                        android:padding="5dp"
                        android:id="@+id/question"
                        android:layout_width="321dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/monocodefont"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </FrameLayout>

                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/monocodefont"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/optionA"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/monocodefont"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/optionB"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/monocodefont"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:backgroundTint="@color/grey"
                    android:fontFamily="@font/horizonfont"
                    android:text="@string/submit"
                    android:textColor="@color/green"
                    android:textSize="24sp"
                    android:layout_marginTop="25dp"
                    android:includeFontPadding="false"
                    android:padding="10dp"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/grey">

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/horizonfont"
                android:textColor="@color/green"
                android:textSize="40sp"
                android:gravity="center"
                />

            <Button
                android:id="@+id/playAgain"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/horizonfont"
                android:text="@string/playAgain"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:includeFontPadding="false" />
            <Button
                android:id="@+id/menu"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/horizonfont"
                android:text="@string/backToMenu"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:includeFontPadding="false" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>